--- a/Semi_project_01/WebContent/css/wManage1.css
+++ b/Semi_project_01/WebContent/css/wManage1.css
@@ -1,115 +1,244 @@
 @charset "UTF-8";
+
+table, td {
+	border-collapse: collapse;
+}
+a {
+	text-decoration: none;
+}
 /* 탈퇴요청관리 */
-        .wdrManage {
-            position: relative;
-            width: 1080px;
-            height: 500px;
-            margin: 0 auto;
-            padding-top: 60px;
-        }
-        /* 탈퇴요청관리 aside*/
-        .wdrManage_aside{   
-            position: absolute;
-            width: 200px;
-            height: auto;
-            float: left;
-            margin-right: 60px;
-        }
-        #wdrManage_asidetlt{
-        	font-size : 30px;
-            padding-bottom: 20px;
-        }   
-        
-        .wdrManage_asidenav ul li {
-            height: 50px;
-            padding-left: 20px;
-            border: solid 1px;
-            box-sizing: border-box;
-        }
-        .wdrManage_asidenav ul li a {
-            line-height: 50px;
-        }
+.wdrManage {
+	position: relative;
+	width: 1080px;
+	height: 500px;
+	margin: 0 auto;
+	padding-top: 60px;
+}
+/* 탈퇴요청관리 aside*/
+.wdrManage_aside {
+	position: absolute;
+	width: 200px;
+	height: auto;
+	float: left;
+	margin-right: 60px;
+}
 
-        /* 탈퇴요청관리 content*/
-        .wdrManage_cont {
-            position: absolute;
-            left: 260px;
-            width: 820px;
-        }
-        /* 탈퇴요청관리 content title*/
+.wdrManage_asidetlt {
+	font-size: 30px;
+	padding-bottom: 26px;
+}
 
-        .wdrManage_cont_title {
-            width: 100%;
-            font-size:24px;
-            padding-bottom: 20px;
-        }
-        /* 탈퇴요청관리 content board*/
-        .wdrManage_cont_board{
-            width: 100%;
-        }
-        .wdrManage_cont_board > table{
-            width: 100%;
-            border: solid 1px;
-            
-        }
-        .txt_wdrno, .not1_wdrno{
-            width: 100px;
-            text-align: center;
-        }
-        .txt_wdrid, .not1_wdrid{
-            width: 200px;
-            text-align: center;
-        }
-        .txt_wdrdate, .not1_wdrdate{
-            width: 210px;
-            text-align: center;
-        }
-        .txt_wdracpDate, .not1_wdracpDate{
-            width: 210px;
-            text-align: center;
-        }
-        .txt_wdracp, .not1_wdracp{
-            width: 100px;
-            text-align: center;
-        }
-        
-        table thead tr{
-            height: 40px;
-            line-height: 40px;
-            background-color: rgb(216, 216, 216);
-            font-size: 12px;
-        }
-        .notice1{
-            width: 820px;
-            height: 30px;
-            line-height: 30px;
-            font-size: 12px;
-        }
-        /* 탈퇴요청관리 페이지 넘버 */
-        .wdrManage_pagination{
-            width: 100%;
-            height: 30px;
-            text-align: center;
-            margin: 15px 0;   
-        }
-        .wdrManage_pagination a {
-            display: inline-block;
-            width: 15px;
-            height: 15px;
-            font-size: 12px;
-            line-height: 15px;
-            padding: 5px;
-            border: solid 0.5px;
-        }
-        .wdrManage_search {
-            clear : both;
-            float : right;
-            padding : 10px 0;
-        }
-        #wdrManage_searchbar{
-            width: 200px;
-        }
-        #wdrManage_searchbtn{
-            width: 50px;
-        }
+.wdrManage_cont_title {
+	font-size: 24px;
+	padding-bottom: 26px;
+}
 
+.wdrManage_asidenav {
+	border: 1px solid #f2f2f2;
+	border-bottom: 0;
+}
+
+.wdrManage_asidenav ul li {
+	height: 50px;
+	line-height: 19px;
+	padding: 15px 0 15px 20px;
+	border-bottom: 1px solid #f2f2f2;
+	box-sizing: border-box;
+}
+
+.wdrManage_asidenav ul li a {
+	font-size: 14px;
+	color: #666;
+}
+
+.wdrManage_asidenav ul li:hover, .wdrManage_asidenav ul li:hover a {
+	color: #425c5a;
+	font-weight: 700;
+	background-size: 20px px;
+	background-color: #fafafa;
+}
+
+.aside_arrow {
+	position: absolute;
+	right: 0;
+	padding-right: 20px;
+	line-height: 20px;
+	font-size: 14px;
+}
+
+/* 탈퇴요청관리 content*/
+.wdrManage_cont {
+	position: absolute;
+	left: 260px;
+	width: 820px;
+}
+/* 탈퇴요청관리 content title*/
+.wdrManage_cont_title {
+	width: 100%;
+}
+/* 탈퇴요청관리 content board*/
+.wdrManage_cont_board {
+	width: 100%;
+	border-top: 2px solid #425c5a;
+}
+
+.wdrManage_cont_board_tb1 {
+	width: 100%;
+	letter-spacing: -0.4px;
+}
+
+.wdrManage_cont_board_tb1 thead tr {
+	border-bottom: 1px solid black;
+}
+
+.notice1 {
+	border-top: 1px solid #f2f2f2;
+}
+
+.txt_wdrno, .not1_wdrno {
+	width: 100px;
+	text-align: center;
+}
+
+.txt_wdrid, .not1_wdrid {
+	width: 200px;
+	text-align: center;
+}
+
+.txt_wdrdate, .not1_wdrdate {
+	width: 210px;
+	text-align: center;
+}
+
+.txt_wdracpDate, .not1_wdracpDate {
+	width: 210px;
+	text-align: center;
+}
+
+.txt_wdracp, .not1_wdracp {
+	width: 100px;
+	text-align: center;
+}
+
+table thead th {
+	padding: 20px 0;
+	vertical-align: middle;
+	font-size: 12px;
+}
+
+.wdrManage_cont_board_tb1 tbody td {
+	padding: 20px 0;
+	font-size: 12px;
+}
+
+.wdrManage_cont_board_tb1 tbody {
+	border-bottom: 2px solid #f2f2f2;
+}
+/* 탈퇴요청관리 페이지 넘버 */
+.wdrManage_pagination {
+	width: 100%;
+	height: 34px;
+	text-align: center;
+	margin-top: 60px;
+	word-spacing: -8px;
+}
+
+.wdrManage_pagination_warp a:nth-child(1) {
+	border-left: 1px solid #ddd;
+}
+
+.wdrManage_pagination_warp a {
+	display: inline-block;
+	width: 34px;
+	height: 34px;
+	font-size: 12px;
+	font-weight: 700;
+	line-height: 34px;
+	border: 1px solid #ddd;
+	border-left: 0;
+	box-sizing: border-box;
+	cursor: pointer;
+}
+
+.wdrManage_pagination_warp a:hover {
+	background-color: #f7f7f7;
+	color: #425c5a;
+}
+
+/* 검색옵션 */
+.wdrManage_search_wrap {
+	clear: both;
+	width: 100%;
+	margin-top: 30px;
+	border-top: 2px solid #425c5a;
+}
+
+.wdrManage_search {
+	float: right;
+	margin: 30px 0;
+	word-spacing: -10px;
+}
+
+.search_option {
+	width: 100px;
+	height: 34px;
+	border: 1px solid #bfbfbf;
+}
+
+#wdrManage_searchbar {
+	width: 200px;
+	height: 34px;
+	border: 1px solid #bfbfbf;
+	border-right: 0;
+	box-sizing: border-box;
+	vertical-align: middle;
+}
+
+#wdrManage_searchbtn {
+	width: 34px;
+	height: 34px;
+	border: 1px solid #425c5a;
+	box-sizing: border-box;
+	padding: 0;
+	vertical-align: middle;
+	background-color: #425c5a;
+}
+
+#search_icon {
+	-webkit-filter: opacity(1) drop-shadow(0 0 0 white);
+	filter: opacity(1) drop-shadow(0 0 0 white);
+}
+/* aside 아래 */
+.CS_info {
+	position: absolute;
+	top: 261px;
+	width: 200px;
+	height: 60px;
+	box-sizing: border-box;
+	margin-top: 20px;
+	background-color: #fafafa;
+	border-radius: 0 100px 100px 0;
+	padding: 9px 0 0 21px;
+}
+
+.CS_info a {
+	font-size: 12px;
+	line-height: 22px;
+	color: #333;
+}
+
+#one {
+	font-size: 14px;
+	font-weight: bold;
+	color: #333;
+}
+
+#two {
+	position: absolute;
+	right: 0;
+	color: #425c5a;
+	font-size: 14px;
+	font-weight: bold;
+	margin-right: 20px;
+	margin-top: 11px;
+}
